fix toffle menu z-index issue

--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -102,7 +102,7 @@ a:hover {
 // Spacing
 
 .container {
-  max-width: 70.625rem;
+  max-width: 1230px;
   margin: auto;
   padding-right: 1.375rem;
   padding-left: 1.375rem;
