--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -113,6 +113,7 @@
   &__menu.open {
     opacity: 1;
     pointer-events: all;
+    z-index: 98;
   }
 
   &__links {
