--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -18,6 +18,17 @@
     @include breakpoint-up(large) {
       text-align: left;
       margin-bottom: 0rem;
+
+
+
+    }
+
+    h1 {
+      @include breakpoint-up(large) {
+        margin-bottom: 2rem;
+        font-size: 3.8rem;
+      }
+
     }
 
     p {
@@ -33,7 +44,7 @@
       @include breakpoint-up(large) {
         font-size: 1.65rem;
         width: 25rem;
-        margin: 1.895rem 0rem;
+        margin: 0rem 0rem 3rem;
       }
     }
 
@@ -42,6 +53,8 @@
       display: inline-block;
       transition: transform 200ms ease-in-out;
       transform: scale(1);
+
+
 
       i {
         color: $blue;
@@ -52,7 +65,7 @@
         }
 
         @include breakpoint-up(large) {
-          font-size: 2.625rem;
+          font-size: 3rem;
         }
       }
     }
