--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -31,7 +31,7 @@
             grid-column: 1 / 2;
             grid-row: 1 / 4;
             padding: 3rem;
-            background: rgb(235, 235, 235);
+            background: #dafffa;
         }
 
         img {
@@ -53,7 +53,7 @@
             display: flex;
             justify-content: center;
             flex-direction: column;
-            background: rgb(227, 247, 252);
+            background: #e2f5ff;
             padding: 3rem 3.5rem 0rem;
         }
 
@@ -76,7 +76,7 @@
             grid-row: 3 / 4;
             padding-left: 3.5rem;
             padding-top: 3rem;
-            background: rgb(227, 247, 252);
+            background: #e2f5ff;
         }
     }
 
@@ -91,7 +91,7 @@
             grid-column: 3 / 4;
             grid-row: 3 / 4;
             padding-right: 3.5rem;
-            background: rgb(227, 247, 252);
+            background: #e2f5ff;
         }
 
     }
